--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,7 @@
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-tab-view": "^3.5.2",
+    "react-native-vector-icons": "^10.2.0",
     "react-native-video": "^5.2.1",
     "react-native-video-controls": "^2.8.1"
   },
